--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -3,8 +3,8 @@ database=mysql
 # database warning: 
 # -> https://stackoverflow.com/questions/43562880/springboot-unknown-property-in-application-properties
 
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost/petclinic}
-spring.datasource.username=${MYSQL_USER:petclinic}
-spring.datasource.password=${MYSQL_PASS:petclinic}
+spring.datasource.url=jdbc:mysql://localhost:3306/petclinic
+spring.datasource.username=root
+spring.datasource.password=root
 # SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
