--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.7.12'
+	id 'org.springframework.boot' version '3.3.9'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
@@ -8,9 +8,8 @@ group = 'dev.spring'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '11'
+	sourceCompatibility = '17'
 }
-
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -29,16 +28,22 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// Lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	
+
 	runtimeOnly 'org.webjars:webjars-locator-core'
-  	runtimeOnly "org.webjars.npm:bootstrap:${webjarsBootstrapVersion}"
-  	runtimeOnly "org.webjars.npm:font-awesome:${webjarsFontawesomeVersion}"
+	runtimeOnly "org.webjars.npm:bootstrap:${webjarsBootstrapVersion}"
+	runtimeOnly "org.webjars.npm:font-awesome:${webjarsFontawesomeVersion}"
+
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 }
 
 tasks.named('test') {
